coding/static/coding/css/default.css
html, body, #assignment-root-view { min-height: 100%; height: 100%;}

/* core */
ul.styleless { list-style: none; list-style-position: inside; padding-left: 0;}

#page-body, #page-body .row { min-height: 100%; height: 100%;}
#left-sidebar { background: #333; color: #eee; min-height: 100%; position: fixed;}


.login-panel { margin-top: 100px;}

.code-sidebar-link { min-height:60px; font-size: 12px; margin-bottom: 50px;}
.code-sidebar-link a:link, .code-sidebar-link a:visited, .code-sidebar-link a { color: #eee; text-decoration: none; }
.code-sidebar-link a:hover, .code-sidebar-link a:active { color: #fff; text-decoration: underline; }



/* code list */
.code-scheme-code-list { position: relative; }
.code-scheme-code-list .code { font-size: 14px; line-height: 20px;}
.code-scheme-code-list .code > div { padding-left: 10px ;}
.code-scheme-code-list > .loading-container { position: absolute; top: 0; left: 0; z-index: -100; width: 100%;}

.code-link, .code-link:link, .code-link:visited { color: #fff; text-decoration: none; }
.code-link:hover, .code-link:active { color: #ccf; text-decoration: underline;}
li.code { height: 24px; line-height: 24px;}
li.code.applied { font-weight: bold; background-color: #337ab7; }

.code-item-container { position: relative; }
li.code .code-delete { font-size: 18px; position: absolute; right: 8px; top: 0px; color: #fff;}

.unfiltered-code-list { margin-top: 20px; }

/* user tweet list */
.user-tweet-list { list-style: none; list-style-position: inside; padding: 0;}
.user-tweet-list > li { display: block; border-top: 1px solid #ccc; overflow: auto; }

.code .code-key { display: inline-block; background: #ddd; padding: 0px 6px; 
	border: 1px solid #888; color: #333; font-weight: normal; margin-right: 5px;
	border-radius: 5px;
	-webkit-box-shadow: 0 2px 2px 1px rgba(0,0,0,0.3), 0 0 0 2px #fff inset;
	box-shadow: 0 2px 2px 1px rgba(0,0,0,0.3), 0 0 0 2px #fff inset;
}

.code .code-key.missing { border: none; background: transparent; -webkit-box-shadow: none; box-shadow: none; width: 1.5em;}


.loading-container { position: relative; min-height: 50px;}

.profile-bar-top { margin: 10px 0;}

.profile-banner { min-height: 300px; position: relative;}
.profile-background, .profile-banner-img { position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
.profile-background { height: 100%; background-size: cover; background-repeat: no-repeat; }
.profile-banner-img {  background-size: contain; background-position: center; background-repeat: no-repeat;}

.profile-stats-banner { height: 40px; margin: 10px 0;}

.profile-main-content { background: #eee; padding-top: 10px; padding-bottom: 10px; }

.profile-details { color: #333; }
.profile-img-container { background: #aaa; border: 1px solid #ccc; }
.profile-img-container.large { width: 200px; height: 200px; margin-top: -150px; }
.profile-image-url.large { overflow: hidden; border: 2px solid #fff;}
.profile-img-container.large, .profile-image-url.large { border-radius: 10px; }
.profile-img-container.small, .profile-image-url.small { border-radius: 5px; }
.profile-image-url > img { max-width: 194px; max-height: 194px; }
.profile-name { font-size: 28px; }
.profile-screen-name { color: #888; }
.profile-description { margin-top: 20px; min-height: 48px;}


.icon-detail-list .list-icon { margin-right: 10px; }
.icon-detail-list .list-text { font-size: 12px; color: #888;}
.profile-details .list-icon { color: #888;}

.profile-details-spacer { height: 20px; }


.profile-stats-label { color: #888; font-size: 14px;}
.profile-stats-value { color: #333; font-size: 18px; font-weight: 500;}

.tweet-list-container { background: #fff; border: solid 1px #ccc; margin-top: 20px;}
.tweet-list-header { height: 40px;  }
.tweet-list-filter-tabs { padding: 10px 0;}
.tweet-list-filter-tabs li.selected { border-bottom: 2px solid #888; text-align: center; margin-bottom: 10px ;}

.empty-tweet-list { height: 50px; text-align: center; line-height: 50px; color: #888; }



/*
 *
 * tweet specific
 *
 */ 
.retweet-header {  padding: 10px 0 0 5px; margin-bottom: 10px;}
.retweet-icon { position: absolute; right: 0px; 
    background-color: #77b255;
    padding: 0 2px;
    font-size: 12px;
    color: #fff;
}

.tweet-header {
	margin: 10px 0;
}

.tweet-profile-img-container { position: absolute; right: 0px; min-height: 50px;}
.user-tweet-name { font-weight: bold;}
.user-tweet-screen-name, .user-tweet-dot, .user-tweet-creation-time { color: #aaa; }

.tweet-media img { max-width: 100%;}
.tweet-text-container { margin-bottom: 10px;}

.tweet-extra-data { background-color: #eee; border-top: 1px solid #888; padding-bottom: 20px;}

.tweet-modified-retweet-text { padding-left: 20px; }
.tweet-modified-retweet-text blockquote { border: 1px solid #aaa; border-radius: 5px; padding: 10px; font-size: 14px;}

.tweet-replies-container { background: #e8e8e8; border-top: 1px solid #aaa;}
.tweet-replies { padding: 10px 0px 10px 32px; }

.tweet-in-reply-to-tweet { background: #f0f0f0; }
.tweet-profile-img-outer { position: relative; width: 80px; padding: 15px 10px 10px 17px; float: left; }
.tweet-profile-img-outer .tweet-profile-img-container { position: relative; width: 48px; height: 60px; }

